# qp_solvers

./: .gitmodules
nasoq/: CMakeLists.txt  package.xml
osqp/: CMakeLists.txt  package.xml
osqp-cpp/: .rosinstall  CMakeLists.txt  README.md  package.xml
osqp-eigen/: CMakeLists.txt  README.md  package.xml
proxsuite/: CMakeLists.txt  package.xml
qpSWIFT/: CMakeLists.txt  README.md  package.xml
qpoases/: CMakeLists.txt  README.md  package.xml
qpswifteigen/: CMakeLists.txt  package.xml
qpswifteigen/include/qpswifteigen/: qpswifteigen.h
qpswifteigen/src/: qpswifteigen.cpp
