<?xml version="1.0"?>
<package format="2">
  <name>osqp-cpp</name>
  <version>0.0.0</version>
  <description>osqp-cpp</description>
  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen</build_depend>
  <build_depend>osqp</build_depend>
  <build_depend>abseil-cpp</build_depend>

</package>

