<?xml version="1.0"?>
<package format="2">
  <name>proxsuite</name>
  <version>0.0.0</version>
  <description>proxsuite</description>
  <maintainer email="t-hiraoka@jsk.imi.i.u-tokyo.ac.jp">Takuma-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>git</build_depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>

