<?xml version="1.0"?>
<package format="2">
  <name>qpoases</name>
  <version>0.0.0</version>
  <description>The qpoases package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- <buildtool_depend>cmake</buildtool_depend> -->
  <!-- <export> -->
  <!--   <build_type>cmake</build_type> -->
  <!-- </export> -->

</package>
